# mouvify-forge

./: .gitignore  .markdownlint.json  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_V1.md  GLOSSARY.md  KNOWN_BUGS.md  LICENSE  LICENSE-DOCS  Makefile  PHASE2-4-FUNCTION-SUPPORT.md  README.md  ROADMAP.md  SRED_RESEARCH_LOG.md  TEST_COVERAGE_AUDIT.md  ethics.yaml  roadmap.yaml  sprint.yaml  test.yaml  test_financial.yaml  test_platform.yaml  test_underscore.yaml  warmup.yaml
.asimov/: asimov.yaml  ethics.yaml  exhaustive.json  freshness.json  green.json  green.yaml  project.yaml  protocols.json  roadmap.yaml  sprint.json  sprint.yaml  sycophancy.json  sycophancy.yaml  warmup.json  warmup.yaml
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.claude/hooks/: pre-compact.sh  session-start.sh
.githooks/: pre-commit
.github/actions/validate/: README.md  action.yml
.github/workflows/: ci.yml  close-external-prs.yml  forge-validate.yml  release.yml
diagrams/: README.md  architecture-overview.puml
docs/: AI-PROMOTION-STORY.md  AI_ECONOMICS.md  AUTONOMOUS_SESSION_GUIDE.md  AUTONOMOUS_STORY.md  CANADIAN_GRANT_OPPORTUNITIES.md  DEVELOPMENT.md  EXAMPLES.md  EXCEL_EXPORT_DESIGN.md  EXCEL_IMPORT_DESIGN.md  FEATURES.md  FORGE-PROTOCOL.md  FORGE_V4_DESIGN.md  GLOSSARY.md  GRANT_RESEARCH_2025-11-24.md  INSTALLATION.md  MERMAID_GUIDE.md  PRESENTATION.md  ROADMAP.md  RUST_PATTERNS.md  SPRINT_AUTONOMY_PROTOCOL.md  THE-WARMUP-PROTOCOL.md  VERSION_HISTORY.md  grants.md  rust-patterns.md
docs/architecture/: 00-OVERVIEW.md  01-COMPONENT-ARCHITECTURE.md  02-DATA-MODEL.md  03-FORMULA-EVALUATION.md  04-DEPENDENCY-RESOLUTION.md  05-EXCEL-INTEGRATION.md  06-CLI-ARCHITECTURE.md  07-TESTING-ARCHITECTURE.md  08-API-SERVER-ARCHITECTURE.md  ADR-001-NO-GRPC.md  ADR-002-VARIANCE-YAML-ONLY.md  ADR-003-EDITOR-EXTENSIONS.md  ADR-004-100-PERCENT-TEST-COVERAGE.md  ADR-005-NO-LSP.md  ADR-006-COVERAGE-EXCLUSIONS.md  ADR-007-CODE-ORGANIZATION.md  DESIGN_V1.md  README.md
docs/cli/: README.md
docs/internal/: CANADIAN_GRANT_OPPORTUNITIES.md  GRANT_RESEARCH_2025-11-24.md  SRED_GUIDE.md  SRED_RESEARCH_LOG.md  roadmap.yaml  warmup-archive.yaml
docs/research/: EXPERIENTIAL_CONTINUITY.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: forge-yaml.tmLanguage.json
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/forge/: highlights.scm
editors/zed/src/: lib.rs
examples/: check_columns.rs  check_export.rs  debug_parse.rs  test_formulas.rs
schema/: README.md  forge-v1.0.schema.json
src/: calculator.rs  error.rs  lib.rs  main.rs  parser.rs  types.rs  update.rs  writer.rs
src/api/: handlers.rs  mod.rs  server.rs
src/cli/: commands.rs  commands_tests.rs  mod.rs
src/core/: array_calculator.rs  calculator.rs  mod.rs  unit_validator.rs
src/core/array_calculator/: dates.rs  evaluator.rs  math.rs  mod.rs  parser.rs  text.rs  tokenizer.rs
src/core/array_calculator/tests/: mod.rs
src/excel/: exporter.rs  formula_translator.rs  importer.rs  mod.rs  reverse_formula_translator.rs
src/lsp/: capabilities.rs  document.rs  mod.rs  server.rs
src/mcp/: mod.rs  server.rs
src/parser/: mod.rs
src/writer/: mod.rs
test-data/: actual.yaml  budget.yaml  export_basic.yaml  export_cross_table.yaml  export_with_formulas.yaml  if_compare_test.yaml  if_mult3_test.yaml  if_scalar_test.yaml  includes_bad_formula.yaml  includes_circular_a.yaml  includes_circular_b.yaml  includes_circular_real_a.yaml  includes_circular_real_b.yaml  includes_complex.yaml  includes_costs.yaml  includes_invalid_alias.yaml  includes_invalid_formula_in_included.yaml  includes_main.yaml  includes_malformed_included_file.yaml  includes_malformed_syntax.yaml  includes_missing_file.yaml  includes_mixed_refs.yaml  includes_pricing.yaml  includes_revenue.yaml  includes_stale_included_file.yaml  includes_stale_values.yaml  includes_with_circular_dep.yaml  quota_forecast.yaml  roundtrip_test.yaml  scalar_metadata_test.yaml  sensitivity_test.yaml  test.yaml  test_advanced_functions.yaml  test_array_functions.yaml  test_circular.yaml  test_conditional_aggregation.yaml  test_date_functions.yaml  test_edge_cases.yaml  test_financial.yaml  test_forge_functions.yaml  (+16 more)
test-data/v1.0/: budget_vs_actual.yaml  conditional_aggregations.yaml  date_functions.yaml  math_functions.yaml  quarterly_pl.yaml  saas_unit_economics.yaml  text_functions.yaml
tests/: api_tests.rs  array_calculator_tests.rs  binary_integration_tests.rs  cli_integration_tests.rs  cli_tests.rs  e2e_tests.rs  error_tests.rs  excel_tests.rs  formula_edge_cases_tests.rs  mcp_tests.rs  parser_v1_tests.rs  performance_bench.rs  unit_validator_tests.rs  update_tests.rs  validation_tests.rs
