[package]
name = "royalbit-forge"
version = "1.2.1"
edition = "2021"
authors = ["Claude (Sonnet 4.5) - AI Developer <noreply@anthropic.com>", "Louis Tavares <louis@royalbit.ca>", "RoyalBit Inc. <admin@royalbit.ca>"]
description = "Bidirectional Excel-YAML bridge with 50+ Excel functions. Built autonomously by AI in ~23.5 hours (20-50x velocity). 141 tests, zero warnings, production-tested. Stop AI hallucinations, save $40K-$132K/year."
repository = "https://github.com/royalbit/forge"
homepage = "https://github.com/royalbit/forge"
documentation = "https://github.com/royalbit/forge#readme"
license = "MIT"
keywords = ["yaml", "formula", "calculator", "excel", "financial"]
categories = ["command-line-utilities", "parsing", "development-tools"]
readme = "README.md"
exclude = [
    "test-data/*",
    ".git*",
]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"  # JSON handling for schema validation

# Expression evaluation (Excel-compatible formulas)
xlformula_engine = "0.1.18"

# JSON Schema validation (v1.0.0 array model)
jsonschema = "0.18"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Dependency graph (for formula ordering)
petgraph = "0.6"

# Regex for array indexing preprocessing
regex = "1.11"

# Pretty output
colored = "2.1"

# Excel export (v1.0.0 array model)
rust_xlsxwriter = "0.90"

# Excel import (v1.0.0 array model)
calamine = "0.31"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.8"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
