[package]
name = "royalbit-forge"
version = "4.1.2"
edition = "2021"
authors = ["Claude (Opus 4.5) - Principal Autonomous AI <noreply@anthropic.com>", "RoyalBit Inc. <admin@royalbit.ca>"]
description = "YAML formula calculator built with the Asimov Protocol (github.com/royalbit/asimov). 60+ Excel functions, 96K rows/sec."
repository = "https://github.com/royalbit/forge"
homepage = "https://github.com/royalbit/forge"
documentation = "https://github.com/royalbit/forge#readme"
license = "MIT"
keywords = ["yaml", "formula", "excel", "asimov", "ai-built"]
categories = ["command-line-utilities", "parsing", "development-tools"]
readme = "README.md"
exclude = [
    "test-data/*",
    ".git*",
]

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "forge-lsp"
path = "src/bin/forge_lsp.rs"

[[bin]]
name = "forge-mcp"
path = "src/bin/forge_mcp.rs"

[[bin]]
name = "forge-server"
path = "src/bin/forge_server.rs"

[dependencies]
# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"  # JSON handling for schema validation

# Expression evaluation (Excel-compatible formulas)
xlformula_engine = "0.1.18"

# JSON Schema validation (v1.0.0 array model)
jsonschema = "0.18"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Dependency graph (for formula ordering)
petgraph = "0.6"

# Regex for array indexing preprocessing
regex = "1.11"

# Pretty output
colored = "2.1"

# Excel export (v1.0.0 array model)
rust_xlsxwriter = "0.90"

# Excel import (v1.0.0 array model)
calamine = "0.31"

# File watching (v1.4.0 watch mode)
notify = "7.0"
notify-debouncer-mini = "0.5"

# LSP Server (v1.5.0 - powers all editor extensions)
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "net"] }
dashmap = "6.0"
ropey = "1.6"
async-trait = "0.1"

# API Server (v2.0.0 - enterprise HTTP API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.8"
# Git hooks (auto-installs on cargo test)
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
